camunda8 - v2/operate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operate
  labels:
    app: operate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operate
  template:
    metadata:
      labels:
        app: operate
    spec:
      containers:
        - name: operate
          image: docker.io/camunda/operate:8.7.13
          ports:
            - name: http
              containerPort: 8080
