camunda8 - v2/operate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operate
  labels:
    app: operate
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: operate
